--- a/templates/feed.html
+++ b/templates/feed.html
@@ -13,7 +13,7 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
@@ -21,7 +21,7 @@
                         Link
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
+                        <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
                         <li><a class="dropdown-item" href="#">Another action</a></li>
                         <li>
                             <hr class="dropdown-divider">
@@ -33,11 +33,14 @@
                     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Link</a>
                 </li>
             </ul>
+            {% if request.path == '/feeds/' %}
             <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
-            <img src="/qedq" width="50" height="50">
+
+            <a href="{% url 'profile' %}"><img src="{{ propic.url }}" width="50" height="50"></a>
+            {% endif %}
         </div>
     </div>
 </nav>
