--- a/templates/feed.html
+++ b/templates/feed.html
@@ -44,4 +44,38 @@
         </div>
     </div>
 </nav>
+<div class="container">
+    <div class="row">
+        {% for i in object_list %}
+        <div class="col-6 m-auto">
+            <div class="card shadow m-3 p-5">
+                <div class="card-body">
+                    <div class="card-title">
+                        <h3 class="fw-bold">{{i.user.username}}</h3>
+                    </div>
+                    <div class="cardtext">
+                        {{i}}
+                    </div>
+                    <div class="mt-3 my-auto d-flex align-items-center">
+                        <a href="{% url 'like' i.slug %}">
+                            {% if i.isLiked %}
+                            <i class="bi bi-heart-fill h4 me-2"></i>
+                            {% else %}
+                            <i class="bi bi-heart h4 me-2"></i>
+                            {% endif %}
+                        </a>{{ i.likes_count }}
+                        Likes
+                    </div>
+                    <div class="text-end">
+                        {{i.created|timesince}} ago
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+
+    </div>
+
+</div>
 {%endblock %}
