--- a/templates/feed.html
+++ b/templates/feed.html
@@ -1,76 +1,77 @@
 {%extends "base.html" %}
 {% block content %}
-<nav class="navbar navbar-expand-lg navbar-light bg-light ms-5 me-5">
+<nav class="navbar navbar-expand-lg navbar-light bg-primary ms-5 me-5 mt-3 rounded-pill">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar scroll</a>
+        <a class="navbar-brand text-white ms-3" href="{% url 'feeds' %}">
+            <h3>TweetApp</h3>
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
             aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarScroll">
             <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
+                    <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                </li> -->
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Link
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                        <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Link</a>
-                </li>
+                </li> -->
             </ul>
-            {% if request.path == '/feeds/' %}
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            {% if request.path == "/feeds/" %}
+            <form class="d-flex" method="get" action="">
+                <input class="form-control me-2" type="search" name="search" value="{{request.session.search}}"
+                    placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
-
-            <a href="{% url 'profile' %}"><img src="{{ propic.url }}" width="50" height="50"></a>
             {% endif %}
+
+            <a href="{% url 'profile' %}"><img src="{{ request.user.userprofile.avatar.url }}" width="50" height="50"
+                    style="border-radius: 50%;"></a>
         </div>
     </div>
 </nav>
+{% if request.path == '/feeds/'%}
+<div class="container w-50 shadow-lg p-3 rounded text-center" style="background-color: midnightblue;">
+    <div class="col-6 mx-auto">
+        <form method="post" class="mt-3" action="">{% csrf_token %}
+            {{form.tweet}}
+            <input type="submit" value="shoot!" class="btn btn-light mt-3">
+        </form>
+    </div>
+</div>
+{% endif %}
 <div class="container">
     <div class="row">
-        {% for i in object_list %}
-        <div class="col-6 m-auto">
+        {% for i in posts %}
+        <div class="col-6 mx-auto">
             <div class="card shadow m-3 p-5">
-                <div class="card-body">
-                    <div class="card-title">
-                        <h3 class="fw-bold">{{i.user.username}}</h3>
+                <a href="{% url 'viewtweet' i.slug %}" style="text-decoration: none; color: blueviolet;">
+                    <div class="card-body">
+                        <div class="card-title">
+                            <h3 class="fw-bold">{{i.user.username}}</h3>
+                        </div>
+                        <div class="cardtext">
+                            {{i}}
+                        </div>
+                        <div class="mt-3 my-auto d-flex align-items-center">
+                            <a href="{% url 'like' i.slug %}">
+                                {% if request.user in i.likes.all %}
+                                <i class="bi bi-heart-fill h4 me-2"></i>
+                                {% else %}
+                                <i class="bi bi-heart h4 me-2"></i>
+                                {% endif %}
+                            </a>{{ i.likes_count }}
+                            Likes
+                        </div>
+                        <div class="text-end">
+                            {{i.created|timesince}} ago
+                        </div>
                     </div>
-                    <div class="cardtext">
-                        {{i}}
-                    </div>
-                    <div class="mt-3 my-auto d-flex align-items-center">
-                        <a href="{% url 'like' i.slug %}">
-                            {% if i.isLiked %}
-                            <i class="bi bi-heart-fill h4 me-2"></i>
-                            {% else %}
-                            <i class="bi bi-heart h4 me-2"></i>
-                            {% endif %}
-                        </a>{{ i.likes_count }}
-                        Likes
-                    </div>
-                    <div class="text-end">
-                        {{i.created|timesince}} ago
-                    </div>
-
-                </div>
+                </a>
             </div>
         </div>
         {% endfor %}
