--- a/templates/login.html
+++ b/templates/login.html
@@ -1,12 +1,11 @@
 {% extends "index.html" %}
 {%block content %}
-Login Page
 {% if form.errors %}
 {{ form.errors }}
 {% endif %}
-<form action="" method="post" class="w-50 mx-auto bg-secondary p-5 rounded-3 shadow-lg text-white">
+<form action="" method="post" class="w-50 mx-auto bg-secondary p-5 rounded-3 shadow-lg text-white mt-5">
     {% csrf_token %}
-    <div class="row">
+    <div class="row mt-5">
         <div class="col-6">
             {{form.as_p}}
             <input type="submit" class="btn btn-primary w-100" value="Login">
