--- a/templates/update-profile.html
+++ b/templates/update-profile.html
@@ -1,8 +1,45 @@
-{% include "base.html" %}
 {% include "feed.html" %}
-<div class="container w-50 mx-auto text-center p-5">
-    <form method="post" action="" enctype="multipart/form-data">{% csrf_token %}
-        {{form.as_p}}
-        <input type="submit" value="Update">
-    </form>
+<main>
+    <div class="container w-50 mx-auto text-center p-5 shadow-lg rounded-5 mt-3">
+        <img src="{{request.user.userprofile.avatar.url}}" width="100" height="100" style="border-radius: 50%;">
+        <form method="post" action="" enctype="multipart/form-data">{% csrf_token %}
+            {{form.as_p}}
+            <input type="submit" value="Update" class="btn btn-primary">
+        </form>
+    </div>
+</main>
+<div class="container">
+    <div class="row">
+        {% for i in posts %}
+        <div class="col-6 mx-auto">
+            <div class="card shadow m-3 p-5">
+                <a href="{% url 'viewtweet' i.slug %}" style="text-decoration: none; color: blueviolet;">
+                    <div class="card-body">
+                        <div class="card-title">
+                            <h3 class="fw-bold">{{i.user.username}}</h3>
+                        </div>
+                        <div class="cardtext">
+                            {{i}}
+                        </div>
+                        <div class="mt-3 my-auto d-flex align-items-center">
+                            <a href="{% url 'like' i.slug %}">
+                                {% if request.user in i.likes.all %}
+                                <i class="bi bi-heart-fill h4 me-2"></i>
+                                {% else %}
+                                <i class="bi bi-heart h4 me-2"></i>
+                                {% endif %}
+                            </a>{{ i.likes_count }}
+                            Likes
+                        </div>
+                        <div class="text-end">
+                            {{i.created|timesince}} ago
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+        {% endfor %}
+
+    </div>
+
 </div>
