--- a/templates/update-profile.html
+++ b/templates/update-profile.html
@@ -1,4 +1,4 @@
-{% include "feed.html" %}
+{% include "header.html" %}
 <main>
     <div class="container w-50 mx-auto text-center p-5 shadow-lg rounded-5 mt-3">
         <img src="{{request.user.userprofile.avatar.url}}" width="100" height="100" style="border-radius: 50%;">
