--- a/templates/login.html
+++ b/templates/login.html
@@ -1,18 +1,20 @@
 {% extends "index.html" %}
 {%block content %}
-{% if form.errors %}
-{{ form.errors }}
-{% endif %}
-<form action="" method="post" class="w-50 mx-auto bg-secondary p-5 rounded-3 shadow-lg text-white mt-5">
+<form action="" method="post" class="w-50 mx-auto bg-light p-5 rounded-3 shadow-lg text-white mt-5">
     {% csrf_token %}
+    <h3 class="text-primary text-center">User Login</h3>
+    {% if form.errors %}
+    {{ form.errors }}
+    {% endif %}
     <div class="row mt-5">
         <div class="col-6">
             {{form.as_p}}
             <input type="submit" class="btn btn-primary w-100" value="Login">
 
         </div>
-        <div class="col-6 my-auto">
-            <a href="{% url 'register' %}" class="mx-auto">Register</a>
+        <div class="col-6 my-auto text-black">
+            New to TweetApp? <a href="{% url 'register' %}"
+                class="mx-auto link-underline-opacity-0 link-underline">Register</a>
         </div>
 
     </div>
