--- a/templates/follower-profile.html
+++ b/templates/follower-profile.html
@@ -14,6 +14,8 @@
                     <small>Name: {{object.user.first_name}} {{object.user.last_name}}</small><br>
                     <small>Email: {{object.user.email}}</small><br>
                     <small>Following: <b>{{object.user.userprofile.followers.count }}</b></small><br>
+                    <small>Followers: <b>{{ followerscount }}</b></small><br>
+                    <small>Shoots: <b>{{ posts.count }}</b></small>
                 </div>
                 <div class="col-2">
                     {% if object.user in request.user.userprofile.followers.all %}
