--- a/templates/follower-profile.html
+++ b/templates/follower-profile.html
@@ -26,6 +26,9 @@
 
                 </div>
             </div>
+            <div>
+                Quote: {{object.bio}}
+            </div>
 
         </div>
 
